feat: added tiktoken

--- a/layer_norm.ipynb
+++ b/layer_norm.ipynb
@@ -79,6 +79,7 @@
     "conda install \"numpy>=1.19.0,<2.0.0\" spacy -y  \n",
     "conda install pytorch::pytorch torchvision torchaudio torchtext -c pytorch -y\n",
     "conda install matplotlib tensorboard seaborn -y\n",
+    "conda install conda-forge::tiktoken -y\n",
     "```\n",
     "\n",
     "- gpu setting\n"
@@ -321,8 +322,7 @@
    "source": [
     "## [Multi30k](https://pytorch.org/text/stable/datasets.html#multi30k)\n",
     "\n",
-    "이제 Multi30k 독일어-영어 번역 작업을 사용한 실제 예제를 살펴보겠습니다. 이 작업은 논문에서 다룬 WMT 작업(대규모 기계 번역 task)보다 훨씬 규모가 작지만, 여전히 전체 시스템을 잘 보여줄 수 있습니다.\n",
-    "\n"
+    "이제 Multi30k 독일어-영어 번역 작업을 사용한 실제 예제를 살펴보겠습니다. 이 작업은 논문에서 다룬 WMT 작업(대규모 기계 번역 task)보다 훨씬 규모가 작지만, 여전히 전체 시스템을 잘 보여줄 수 있습니다.\n"
    ]
   },
   {
@@ -390,6 +390,196 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Tokenizer 바꿔보기\n",
+    "\n",
+    "앞서 가져온 spacy의 tokenizer는 단어기반으로 tokenize를 하는 방식입니다. 이 방식의 가장 큰 문제점은, \n",
+    "\n",
+    "1. 신조어들을 잘 처리할 수 없다는 것\n",
+    "2. 뭐해, 뭐함, 뭐를... 같은 비슷한 단어를 다르게 파악합니다.\n",
+    "\n",
+    "이를 해결하기 위해서 subword 기반의 tokenizer가 주로 사용되고 있으며, 저는 openai의 `tiktoken`을 사용해보겠습니다.\n",
+    "\n",
+    "- [확인해보기](https://tiktokenizer.vercel.app/?model=o200k_base)\n",
+    "\n",
+    "위의 링크를 통해서 문장들이 어떻게 tokenize되는지 live로 확인할 수 있습니다.\n",
+    "\n",
+    "저희는 여기서 `o200k_base` encoder를 사용해보겠습니다. 이 인코더는 참고로 현재 기준(24.07.08) 가장 최신인 `gpt-4o`에서 사용되고 있습니다.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['I', ' wish', ' you', ' all', ' the', ' best']\n",
+      "['Ich', ' wünsche', ' Ihnen', ' alles', ' Gute']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tiktoken\n",
+    "\n",
+    "encoding = tiktoken.get_encoding(\"o200k_base\")\n",
+    "\n",
+    "# pytorch text의 multi30k가 사용할 수 있도록 변형\n",
+    "def tokenize(text: str) -> list[str]:\n",
+    "    bytes_list = encoding.decode_tokens_bytes(encoding.encode(text))\n",
+    "    return [b.decode('utf-8') for b in bytes_list]\n",
+    "\n",
+    "\n",
+    "print(tokenize('I wish you all the best'))\n",
+    "print(tokenize('Ich wünsche Ihnen alles Gute'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이제 바뀐 tokenizer로 앞전에 했던 코드들에 적용해주겠습니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6623\n",
+      "6658\n"
+     ]
+    }
+   ],
+   "source": [
+    "from torchtext.data import Field\n",
+    "\n",
+    "UNK = '<unk>' # 0\n",
+    "PAD = '<pad>' # 1\n",
+    "SOS = '<sos>' # 2\n",
+    "EOS = '<eos>' # 3\n",
+    "\n",
+    "source_process_pipeline = Field(tokenize = tokenize,\n",
+    "                       init_token = SOS,\n",
+    "                       eos_token = EOS,\n",
+    "                       pad_token= PAD,\n",
+    "                       unk_token=UNK,\n",
+    "                       lower = True,\n",
+    "                       batch_first = True)\n",
+    "target_process_pipeline = Field(tokenize = tokenize,\n",
+    "                       init_token = SOS,\n",
+    "                       eos_token = EOS,\n",
+    "                       pad_token= PAD,\n",
+    "                       unk_token=UNK,\n",
+    "                       lower = True,\n",
+    "                       batch_first = True)\n",
+    "\n",
+    "\n",
+    "from torchtext.datasets import Multi30k\n",
+    "\n",
+    "Multi30k.urls = [\n",
+    "    \"https://raw.githubusercontent.com/neychev/small_DL_repo/master/datasets/Multi30k/training.tar.gz\",\n",
+    "    \"https://raw.githubusercontent.com/neychev/small_DL_repo/master/datasets/Multi30k/validation.tar.gz\",\n",
+    "    \"https://raw.githubusercontent.com/neychev/small_DL_repo/master/datasets/Multi30k/mmt_task1_test2016.tar.gz\",\n",
+    "]\n",
+    "\n",
+    "train_data, validation_data, test_data = Multi30k.splits(exts = ('.de','.en'),\n",
+    "                                                       fields = (source_process_pipeline,\n",
+    "                                                                target_process_pipeline))\n",
+    "\n",
+    "source_process_pipeline.build_vocab(train_data,min_freq=2)\n",
+    "target_process_pipeline.build_vocab(train_data,min_freq=2)\n",
+    "\n",
+    "print(len(source_process_pipeline.vocab))\n",
+    "print(len(target_process_pipeline.vocab))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('<unk>', 0),\n",
+       " ('<pad>', 1),\n",
+       " ('<sos>', 2),\n",
+       " ('<eos>', 3),\n",
+       " (' a', 4),\n",
+       " ('.', 5),\n",
+       " ('a', 6),\n",
+       " (' in', 7),\n",
+       " (' the', 8),\n",
+       " (' on', 9),\n",
+       " (' is', 10),\n",
+       " (' and', 11),\n",
+       " (' man', 12),\n",
+       " (' of', 13),\n",
+       " (' with', 14),\n",
+       " (',', 15),\n",
+       " (' woman', 16),\n",
+       " (' are', 17),\n",
+       " (' to', 18),\n",
+       " ('two', 19),\n",
+       " (' at', 20),\n",
+       " (' wearing', 21),\n",
+       " (' people', 22),\n",
+       " (' shirt', 23),\n",
+       " (' white', 24),\n",
+       " (' young', 25),\n",
+       " (' black', 26),\n",
+       " (' his', 27),\n",
+       " (' an', 28),\n",
+       " (' while', 29),\n",
+       " (' blue', 30),\n",
+       " (' red', 31),\n",
+       " (' sitting', 32),\n",
+       " (' girl', 33),\n",
+       " (' dog', 34),\n",
+       " (' boy', 35),\n",
+       " (' standing', 36),\n",
+       " (' men', 37),\n",
+       " (' playing', 38),\n",
+       " (' group', 39),\n",
+       " (' street', 40),\n",
+       " (' down', 41),\n",
+       " (' walking', 42),\n",
+       " (' front', 43),\n",
+       " (' her', 44),\n",
+       " (' holding', 45),\n",
+       " (' water', 46),\n",
+       " (' by', 47),\n",
+       " ('the', 48),\n",
+       " ('an', 49)]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(target_process_pipeline.vocab.stoi.items())[:50]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "독일어는 7853 -> 6623로 줄어들었고,\n",
+    "영어는 5893 -> 6658로 커졌습니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## [Bucket Iterator](https://torchtext.readthedocs.io/en/latest/data.html?highlight=bucket#bucketiterator)\n",
     "\n",
@@ -399,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,22 +603,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Model\n"
+    "# 2. Model"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "![](https://upload.wikimedia.org/wikipedia/commons/thumb/8/8f/The-Transformer-model-architecture.png/580px-The-Transformer-model-architecture.png)\n",
+    "class Transformer(nn.Module):\n",
     "\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        encoder,\n",
+    "        decoder,\n",
+    "        source_pad_idx,\n",
+    "        target_pad_idx,\n",
+    "        device,\n",
+    "    ):\n",
     "\n",
+    "        super().__init__()\n",
     "\n",
-    "## 1-1. Big picture\n",
+    "        self.encoder = encoder\n",
+    "        self.decoder = decoder\n",
+    "        self.source_pad_index = source_pad_idx\n",
+    "        self.target_pad_index = target_pad_idx\n",
+    "        self.device = device\n",
     "\n",
-    "@TODO encoder-decoder그림\n",
-    "@TODO linearSoftmax 그림\n",
-    "@padding mask 설명, @look-ahead mask 설명"
+    "    # Source mask = padding mask\n",
+    "    def get_source_mask(self, source):\n",
+    "        # source  = (bsize, source_len)\n",
+    "        # 0: pad, 1: value\n",
+    "        source_mask = source != self.source_pad_index\n",
+    "\n",
+    "        # unsqueeze(i) operation adds an i_th dimension to the item\n",
+    "        source_mask = source_mask.unsqueeze(1)  # (bsize,1,source_len)\n",
+    "        source_mask = source_mask.unsqueeze(2)  # (bsize,1,1,source_len)\n",
+    "\n",
+    "        # source_mask will be applied after calculating-\n",
+    "        # the attention which has 4 dimensions (bsize,n_attn_heads,qlen,klen)\n",
+    "        return source_mask\n",
+    "\n",
+    "    # Target mask = padding mask + look-ahead mask\n",
+    "    def get_target_mask(self, target):\n",
+    "        # target = (bsize,target_len)\n",
+    "        target_length = target.shape[1]\n",
+    "    \n",
+    "        # (bsize,1,1,target_len)\n",
+    "        target_pad_mask = (target != self.target_pad_index).unsqueeze(1).unsqueeze(2)\n",
+    "\n",
+    "        # tril = 행렬의 하부 삼각 부분\n",
+    "        target_subsequent_mask = torch.tril(\n",
+    "            torch.ones((target_length, target_length), device=self.device)\n",
+    "        ).bool()  # (target_len, target_len)\n",
+    "\n",
+    "        return target_subsequent_mask & target_pad_mask  # (bsize,1,tlen,tlen)\n",
+    "\n",
+    "    def forward(self, source, target):\n",
+    "        # source = (bsize,slen)\n",
+    "        # target = (bsize,tlen)\n",
+    "\n",
+    "        source_mask = self.get_source_mask(source)  # (bsize,1,1,slen)\n",
+    "        target_mask = self.get_target_mask(target)  # (bsize,1,tlen,tlen)\n",
+    "\n",
+    "        encoder_output = self.encoder(source, source_mask)  # (bsize,slen,hdim)\n",
+    "        decoder_output, decoder_attention = self.decoder(\n",
+    "            target,\n",
+    "            encoder_output,\n",
+    "            source_mask,\n",
+    "            target_mask,\n",
+    "        ) \n",
+    "        # decoder_output = (bsiz,tlen,output_dim)\n",
+    "        # decoder_attention = (bsize,num_attn_heads,tlen,slen)\n",
+    "        return decoder_output, decoder_attention\n"
    ]
   },
   {
