feat: encoder mid

--- a/layer_norm.ipynb
+++ b/layer_norm.ipynb
@@ -979,7 +979,7 @@
    "source": [
     "class PositionalEncoding(nn.Module):\n",
     "\n",
-    "    def __init__(self, d_model, dropout=0.1, max_seq_len=200):\n",
+    "    def __init__(self, d_model, max_seq_len=200, dropout=0.1):\n",
     "        super(PositionalEncoding, self).__init__()\n",
     "        self.dropout = nn.Dropout(p=dropout)\n",
     "\n",
@@ -1019,6 +1019,8 @@
    "source": [
     "\n",
     "# 5. Encoder\n",
+    "\n",
+    "다음으로 임베딩 + pos encoding이 입력으로 주어졌을 때, 이를 input으로 입력받아 output으로 decoder의 key로 사용될 token들의 embedding을 return하는 encoder를 만들어보도록 하겠습니다.\n",
     "\n",
     "논문 3.1 내용을 토대로 Encoder 스펙을 정리해보겠습니다.\n",
     "\n",
@@ -1061,7 +1063,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MultiHeadAttention(nn.Module):\n",
+    "    \"\"\"Multi-Head Attention module\"\"\"\n",
+    "\n",
+    "    def __init__(self, num_head, d_model, d_k, d_v, dropout=0.1):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.num_head = num_head\n",
+    "        self.d_k = d_k\n",
+    "        self.d_v = d_v\n",
+    "\n",
+    "        # Attention is all you need uses same d_model (q,k,v) so,\n",
+    "        # d_q == d_k == d_v = d_model // num_head\n",
+    "        self.w_q = nn.Linear(d_model, num_head * d_k, bias=False)\n",
+    "        self.w_k = nn.Linear(d_model, num_head * d_k, bias=False)\n",
+    "        self.w_v = nn.Linear(d_model, num_head * d_v, bias=False)\n",
+    "        self.fc = nn.Linear(num_head * d_v, d_model, bias=False)\n",
+    "\n",
+    "        self.attention = ScaledDotProductAttention(temperature=d_k**0.5)\n",
+    "\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.layer_norm = LayerNorm(d_model, eps=1e-6)\n",
+    "\n",
+    "    def forward(self, q, k, v, mask=None):\n",
+    "\n",
+    "        d_k, d_v, n_head = self.d_k, self.d_v, self.num_head\n",
+    "        sz_b, len_q, len_k, len_v = q.size(0), q.size(1), k.size(1), v.size(1)\n",
+    "\n",
+    "        residual = q\n",
+    "\n",
+    "        # Pass through the pre-attention projection: b x lq x (n*dv)\n",
+    "        # Separate different heads: b x lq x n x dv\n",
+    "        q = self.w_q(q).view(sz_b, len_q, n_head, d_k)\n",
+    "        k = self.w_k(k).view(sz_b, len_k, n_head, d_k)\n",
+    "        v = self.w_v(v).view(sz_b, len_v, n_head, d_v)\n",
+    "\n",
+    "        # Transpose for attention dot product: b x n x lq x dv\n",
+    "        q, k, v = q.transpose(1, 2), k.transpose(1, 2), v.transpose(1, 2)\n",
+    "\n",
+    "        if mask is not None:\n",
+    "            mask = mask.unsqueeze(1)  # For head axis broadcasting.\n",
+    "\n",
+    "        q, attn = self.attention(q, k, v, mask=mask)\n",
+    "\n",
+    "        # Transpose to move the head dimension back: b x lq x n x dv\n",
+    "        # Combine the last two dimensions to concatenate all the heads together: b x lq x (n*dv)\n",
+    "        q = q.transpose(1, 2).contiguous().view(sz_b, len_q, -1)\n",
+    "        q = self.dropout(self.fc(q))\n",
+    "        q += residual\n",
+    "\n",
+    "        q = self.layer_norm(q)\n",
+    "\n",
+    "        return q, attn\n",
+    "\n",
+    "\n",
+    "class PositionwiseFeedForward(nn.Module):\n",
+    "    \"\"\"A two-feed-forward-layer module\"\"\"\n",
+    "\n",
+    "    def __init__(self, d_model, d_hidden=2048, dropout=0.1):\n",
+    "        super().__init__()\n",
+    "        self.w_1 = nn.Linear(d_model, d_hidden)  # position-wise\n",
+    "        self.w_2 = nn.Linear(d_hidden, d_model)  # position-wise\n",
+    "        self.layer_norm = LayerNorm(d_model, eps=1e-6)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        residual = x\n",
+    "\n",
+    "        x = self.w_2(F.relu(self.w_1(x)))\n",
+    "        x = self.dropout(x)\n",
+    "        x += residual\n",
+    "        x = self.layer_norm(x)\n",
+    "\n",
+    "        return x\n",
+    "\n",
+    "\n",
+    "\n",
+    "class ScaledDotProductAttention(nn.Module):\n",
+    "    \"\"\"Scaled Dot-Product Attention\"\"\"\n",
+    "\n",
+    "    def __init__(self, temperature, attn_dropout=0.1):\n",
+    "        super().__init__()\n",
+    "        self.temperature = temperature\n",
+    "        self.dropout = nn.Dropout(attn_dropout)\n",
+    "\n",
+    "    def forward(self, q, k, v, mask=None):\n",
+    "\n",
+    "        attn = torch.matmul(q / self.temperature, k.transpose(2, 3))\n",
+    "\n",
+    "        if mask is not None:\n",
+    "            attn = attn.masked_fill(mask == 0, -1e9)\n",
+    "\n",
+    "        attn = self.dropout(F.softmax(attn, dim=-1))\n",
+    "        output = torch.matmul(attn, v)\n",
+    "\n",
+    "        return output, attn\n",
+    "\n",
+    "\n",
+    "# Layer norm test\n",
+    "class LayerNorm(nn.Module):\n",
+    "    \"\"\"Construct a layernorm module\n",
+    "\n",
+    "    d_model 방향으로 평균, 표준편차 계산한다.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, d_model, eps=1e-6):\n",
+    "        super(LayerNorm, self).__init__()\n",
+    "        self.w = nn.Parameter(torch.ones(d_model))\n",
+    "        self.b = nn.Parameter(torch.zeros(d_model))\n",
+    "        self.eps = eps\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        mean = x.mean(-1, keepdim=True) # x is (batch, sentence, d_model)\n",
+    "        std = x.std(-1, keepdim=True)\n",
+    "        return self.w * (x - mean) / (std + self.eps) + self.b\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,15 +1197,65 @@
     "\n",
     "\n",
     "class Encoder(nn.Module):\n",
-    "    def __init__(self, layer, N = 6):\n",
-    "        super(Encoder, self).__init__()\n",
-    "        self.layers = clones(layer, N)\n",
-    "        self.norm = LayerNorm(layer.size)\n",
+    "    \"\"\"A encoder model with self attention mechanism.\"\"\"\n",
     "\n",
-    "    def forward(self, x, padding_mask):\n",
-    "        for layer in self.layers:\n",
-    "            x = layer(x, padding_mask)\n",
-    "        return self.norm(x)"
+    "    def __init__(\n",
+    "        self,\n",
+    "        num_src_vocab,  # source(영어)의 vocabulary 갯수\n",
+    "        pad_idx,\n",
+    "        num_layers=6,\n",
+    "        num_head=8,\n",
+    "        d_model=512,\n",
+    "        dropout=0.1,\n",
+    "        max_seq_len=200,\n",
+    "    ):\n",
+    "\n",
+    "        super().__init__()\n",
+    "        d_k = d_model // num_head  # 512 // 8 = 64\n",
+    "        d_v = d_model // num_head  # 512 // 8 = 64\n",
+    "\n",
+    "        self.src_embedding = nn.Embedding(num_src_vocab, d_model, padding_idx=pad_idx)\n",
+    "        self.pe = PositionalEncoding(d_model, max_seq_len=max_seq_len) # TODO: max_seq_len\n",
+    "        self.dropout = nn.Dropout(p=dropout)\n",
+    "        self.layer_stack = clones(\n",
+    "            EncoderLayer(d_model, num_head, d_k, d_v, dropout=dropout),\n",
+    "            num_layers,\n",
+    "        )\n",
+    "        self.layer_norm = nn.LayerNorm(d_model, eps=1e-6)\n",
+    "        self.d_model = d_model\n",
+    "\n",
+    "    def forward(self, src_seq, src_mask, verbose=False):\n",
+    "\n",
+    "        attentions = []\n",
+    "        enc_output = self.src_embedding(src_seq)\n",
+    "        if self.scale_emb:\n",
+    "            enc_output *= self.d_model**0.5\n",
+    "        enc_output = self.dropout(self.pe(enc_output))\n",
+    "        enc_output = self.layer_norm(enc_output)\n",
+    "\n",
+    "        for enc_layer in self.layer_stack:\n",
+    "            enc_output, attention = enc_layer(enc_output, attn_mask=src_mask)\n",
+    "            attentions += [attention] if verbose else []\n",
+    "\n",
+    "        if verbose:\n",
+    "            return enc_output, attentions\n",
+    "        return (enc_output,)\n",
+    "\n",
+    "\n",
+    "class EncoderLayer(nn.Module):\n",
+    "    \"\"\"Compose with two layers\"\"\"\n",
+    "\n",
+    "    def __init__(self, d_model, num_head, d_k, d_v, dropout=0.1):\n",
+    "        super(EncoderLayer, self).__init__()\n",
+    "        self.slf_attn = MultiHeadAttention(num_head, d_model, d_k, d_v, dropout=dropout)\n",
+    "        self.pos_ffn = PositionwiseFeedForward(d_model, dropout=dropout)\n",
+    "\n",
+    "    def forward(self, enc_input, attn_mask=None):\n",
+    "        enc_output, enc_slf_attn = self.slf_attn(\n",
+    "            enc_input, enc_input, enc_input, mask=attn_mask\n",
+    "        )\n",
+    "        enc_output = self.pos_ffn(enc_output)\n",
+    "        return enc_output, enc_slf_attn"
    ]
   },
   {
@@ -1418,52 +1592,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import copy\n",
-    "\n",
-    "def clones(module, N):\n",
-    "    \"Produce N identical layers.\"\n",
-    "    return nn.ModuleList([copy.deepcopy(module) for _ in range(N)])\n",
-    "\n",
-    "\n",
-    "class Encoder(nn.Module):\n",
-    "    \"Core encoder is a stack of N layers\"\n",
-    "\n",
-    "    def __init__(self, layer, N):\n",
-    "        super(Encoder, self).__init__()\n",
-    "        self.layers = clones(layer, N)\n",
-    "        self.norm = LayerNorm(layer.size)\n",
-    "\n",
-    "    def forward(self, x, padding_mask):\n",
-    "        for layer in self.layers:\n",
-    "            x = layer(x, padding_mask) # norm -> dropout\n",
-    "        return self.norm(x)\n",
-    "\n",
-    "\n",
-    "# Layer norm test\n",
-    "class LayerNorm(nn.Module):\n",
-    "    \"\"\"Construct a layernorm module\n",
-    "\n",
-    "    d_model 방향으로 평균, 표준편차 계산한다.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self, features, eps=1e-5):\n",
-    "        super(LayerNorm, self).__init__()\n",
-    "        self.w = nn.Parameter(torch.ones(features))\n",
-    "        self.b = nn.Parameter(torch.zeros(features))\n",
-    "        self.eps = eps\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        mean = x.mean(-1, keepdim=True) # x is (batch, sentence, d_model)\n",
-    "        std = x.std(-1, keepdim=True)\n",
-    "        return self.w * (x - mean) / (std + self.eps) + self.b\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1656,44 +1784,6 @@
     "print(input_tensor_transposed.shape)\n",
     "print(input_tensor_transposed)\n",
     "nn.BatchNorm1d(d_model)(input_tensor_transposed).transpose(1,2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Decoder(nn.Module):\n",
-    "    \"Generic N layer decoder with masking.\"\n",
-    "\n",
-    "    def __init__(self, layer, N):\n",
-    "        super(Decoder, self).__init__()\n",
-    "        self.layers = deepcopy(layer, N)\n",
-    "        self.norm = LayerNorm(layer.size)\n",
-    "\n",
-    "    def forward(self, x, memory, src_mask, tgt_mask):\n",
-    "        for layer in self.layers:\n",
-    "            x = layer(x, memory, src_mask, tgt_mask)\n",
-    "        return self.norm(x)\n",
-    "\n",
-    "class DecoderLayer(nn.Module):\n",
-    "    \"Decoder is made of self-attn, src-attn, and feed forward (defined below)\"\n",
-    "\n",
-    "    def __init__(self, size, self_attn, src_attn, feed_forward, dropout):\n",
-    "        super(DecoderLayer, self).__init__()\n",
-    "        self.size = size\n",
-    "        self.self_attn = self_attn\n",
-    "        self.src_attn = src_attn\n",
-    "        self.feed_forward = feed_forward\n",
-    "        self.sublayer = deepcopy(SublayerConnection(size, dropout), 3)\n",
-    "\n",
-    "    def forward(self, x, memory, src_mask, tgt_mask):\n",
-    "        \"Follow Figure 1 (right) for connections.\"\n",
-    "        m = memory\n",
-    "        x = self.sublayer[0](x, lambda x: self.self_attn(x, x, x, tgt_mask))\n",
-    "        x = self.sublayer[1](x, lambda x: self.src_attn(x, m, m, src_mask))\n",
-    "        return self.sublayer[2](x, self.feed_forward)    "
    ]
   },
   {
